# genai-agentos-AgentForce

./: docker-compose.yml  pyproject.toml
.github/workflows/: monorepo_cicd.yaml
audio download and transcript/: download_audio.py  readme.txt  requirements.txt  transcribe_audio.py
cli/: pyproject.toml
cli/agents/audioextractor/: audioextractor.py  pyproject.toml
cli/agents/audioprocessor/: audioprocessor.py  pyproject.toml
cli/agents/current_date/: current_date.py
cli/agents/dubbing_agent/: dubbing_agent.py  pyproject.toml
cli/agents/language/: language.py
cli/agents/text_summarizer/: pyproject.toml  text_summarizer.py
cli/agents/transcribe_agent/: pyproject.toml  transcribe_agent.py
cli/agents/translator_agent/: translator_agent.py
cli/agents/translatoragent/: translatoragent.py
master-agent/: main.py  test_local_agent.py
master-agent/agents/: agent.py  base.py  flow_master_agent.py  react_master_agent.py
master-agent/agents/summarizer_agent/: .env.example  requirements.txt  test_local_agent.py
master-agent/agents/translator_agent/: agent.py  env.txt  pyproject.toml
translated audio and notion/: dubbing_agent.py  requirements.txt
