[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advanced-youtube-audio-processor"
version = "1.0.0"
description = "Advanced ML-powered YouTube audio processing with gender detection, transcription, and timeline preservation"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.11"
dependencies = [
    # Core GenAI dependencies
    "genai-protocol>=1.0.0",
    "loguru>=0.7.0",
    
    # YouTube and audio processing
    "yt-dlp>=2024.1.1",
    "ffmpeg-python>=0.2.0",
    
    # Advanced ML and audio analysis
    "torch>=2.0.0",
    "torchaudio>=2.0.0", 
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    
    # Speaker diarization and gender detection
    "pyannote.audio>=3.1.0",
    "speechbrain>=1.0.0",  # Updated to v1.0+ for new imports
    
    # Advanced transcription
    "openai-whisper>=20231117",
    "faster-whisper>=0.10.0",
    "whisperx>=3.1.0",
    
    # Voice analysis and synthesis
    "resemblyzer>=0.1.1",
    "bark<=1.0.0",
    #"TTS>=0.21.0",
    
    # LangChain for LLM integration - COMPLETE SET
    "langchain>=0.3.21",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.10",
    "langchain-ollama>=0.3.1", 
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    
    # Data processing
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Audio effects and processing
    #"pedalboard>=0.7.0",
    "pyrubberband>=0.3.0",
    
    # Utilities
    "pydub>=0.25.0",
    "moviepy>=1.0.3",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "httpx>=0.28.1",
    "jmespath>=1.0.1",
    
    # Additional dependencies for Windows compatibility
    "setuptools>=65.0.0",  # For pkg_resources warnings
    "wheel>=0.38.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "jupyter>=1.0.0", 
    "ipykernel>=6.0.0",
]

gpu = [
    "torch[cuda]>=2.0.0",
    "torchaudio[cuda]>=2.0.0",
]

minimal = [
    # Minimal dependencies for basic functionality
    "genai-protocol>=1.0.0",
    "loguru>=0.7.0",
    "yt-dlp>=2024.1.1",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "langchain>=0.3.21",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.10",
]

windows = [
    # Windows-specific dependencies
    "pywin32>=227",
    "colorama>=0.4.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# UV-specific configuration for better Windows compatibility
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
# Optional: specify sources for faster downloads
#torch = { index = "https://download.pytorch.org/whl/cu118" }  # For CUDA 11.8
# torch = { index = "https://download.pytorch.org/whl/cpu" }  # For CPU only