[project]
name = "genai-agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "genai-protocol",
    "loguru>=0.7.3",
    "openai>=1.70.0",
    "pydantic==2.11.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.7.9",
    "exceptiongroup==1.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "murf==2.0.0",
    "notion-client==2.4.0",
    "sniffio==1.3.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
]